[package]
name = "vega"
version = "0.1.0"
authors = ["raja <rajasekar3eg@gmail.com>"]
edition = "2018"

build = "build.rs"

[lib]
name = "vega"

[features]
aws_connectors = ["rusoto_core", "rusoto_s3"]

[dependencies]
async-trait = "0.1.57"
crossbeam = "0.8.2"
dashmap = "5.4.0"
envy = "^0.4.1"
fasthash = "0.4.0"
futures = { version = "0.3.4" }
hyper = { version = "0.14.20", features = [ "full" ]}
http = "0.2.8"
itertools = "0.10.5"
num_cpus = "1.13.0"
log = "0.4.8"
once_cell = "1.3.1"
parking_lot = { version = "0.12.1", features = ["serde"] }
simplelog = "0.12.0"
statrs = "0.12.0"
thiserror = "1.0.15"
threadpool = "1.7.1"
toml = "0.5.6"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.10"
tokio-util = { version = "0.7.4", features = ["compat"] }
uuid = { version = "1.2.1", features = ["v4"] }
regex = "1.3.6"
lazy_static = "1.4.0"

# randomness
rand = "0.7.3"
rand_distr = "0.2"
rand_pcg = "0.2"

# serialization
bincode = "1.2.1"
capnp = "0.12.1"
capnp-futures = "0.12.0"
serde = { version = "1.0.106", features = ["rc"] }
serde_closure = "0.3.2"
serde_derive = "1.0.106"
uriparse = "0.6.1"

# dynamic typing
downcast-rs = "1.1.1"
dyn-clone = "1.0.1"
serde_traitobject = "0.2.4"

# optional features
## aws
rusoto_core = { version = "0.43", optional = true }
rusoto_s3 = { version = "0.43", optional = true }

[build-dependencies]
capnpc = "0.12.1"

[dev-dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
chrono = "0.4.22"
parquet = "24.0.0"
tempfile = "3"
